Adding and removing entries

--- a/InfoboxScrapper.ipynb
+++ b/InfoboxScrapper.ipynb
@@ -11,7 +11,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -111,8 +114,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "tanks = dict()"
@@ -244,7 +251,7 @@
     "already_saved = [tank.wikientry for tank in tanks.values()]\n",
     "for link in tanks_to_scrap:\n",
     "    if link not in already_saved:\n",
-    "        data = Scrapper.scrapper(link)\n",
+    "        data = Scrapper.scrapper(link)[1]\n",
     "    #     print(data)\n",
     "        tks = Tank.tank_factory(data, link)\n",
     "        for t in tks:\n",
@@ -416,8 +423,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "pickle.dump(tanks, open('tank_tanks.p', 'wb'))"
